Adds a delete file route
